force-app/main/default/objects/Course__c/fields/canceled_rate__c.field-meta.xml
<CustomField>
    <fullName>canceled_rate__c</fullName>
    <formula>Total_canceled_courses__c /100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>canceled rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>