force-app/main/default/objects/Course__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Desactive</fullName>
                <default>true</default>
                <label>Desactive</label>
            </value>
            <value>
                <fullName>active</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>