force-app/main/default/objects/Course__c/fields/Total_canceled_courses__c.field-meta.xml
<CustomField>
    <fullName>Total_canceled_courses__c</fullName>
    <label>Total canceled courses</label>
    <summaryFilterItems>
        <field>Delivery__c.status__c</field>
        <operation>equals</operation>
        <value>Not delivered</value>
    </summaryFilterItems>
    <summaryForeignKey>Delivery__c.Course__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>